# DeltaUp

./: .gitignore  README.md  TASKS_COMPLETED.md  app.js  config.example.json  docker-compose.example.yml  docker-compose.yml  guide.md  index.html  install.sh  manage-logs.sh
.github/workflows/: docker-build.yml
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.build
backend/src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs  oauth.rs
frontend/: .env.example  Dockerfile  Dockerfile.build  next-env.d.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/components/: Chatbot.tsx  ChatbotBubble.tsx  Layout.tsx  PageTransition.tsx  Preloader.tsx  ThemeProvider.tsx  ThemeToggle.tsx
frontend/lib/: api.ts  external.ts
frontend/pages/: 401.tsx  403.tsx  404.tsx  500.tsx  _app.tsx  _document.tsx  balance.tsx  dashboard.tsx  index.tsx  login.tsx  logout.tsx  profile.tsx  qr-payment.tsx  register.tsx  transfer.tsx
frontend/pages/oauth/: callback.tsx
frontend/public/: README.md  site.webmanifest
frontend/styles/: globals.css
