[package]
name = "deltaup-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"

[profile.release]
opt-level = 3

